# gcp-context-switcher

./: LICENSE  README.md  pyproject.toml
gcp_switcher/: __init__.py  __main__.py  cli.py
