[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-context-switcher"
version = "1.0.0"
description = "Fast GCP account/project/GKE cluster switching tool with interactive TUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["gcp", "gcloud", "kubernetes", "gke", "cli", "devops"]
authors = [
    {name = "Your Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.scripts]
gcp-switcher = "gcp_switcher.cli:main"
gcps = "gcp_switcher.cli:main"

[project.urls]
Homepage = "https://github.com/EunyoungPark327/gcp-context-switcher"
Repository = "https://github.com/EunyoungPark327/gcp-context-switcher"
Issues = "https://github.com/EunyoungPark327/gcp-context-switcher/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcp_switcher*"]
